[workspace]
members = [
  "network",
  "primitives",
  "solver",
  "validator",
  "vm",
  "stdpred",
  "sdk/predicates",
  "sdk/predicates/derive",
]
default-members = ["solver", "validator"]

[profile.release]
debug = true
lto = true
opt-level = 3
strip = true
codegen-units = 1
incremental = false
