[package]
name = "anoma-network"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
tracing = "0.1"
thiserror = "1.0"
futures = "0.3.25"
bincode = "1.3"
rand = "0.8.5"
asynchronous-codec = "0.6"
bytes = { version = "1.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21", features = ["full"] }
unsigned-varint = { version = "0.7", features = ["asynchronous_codec"] }
libp2p = { version = "0.49", default-features = false, features = [
  "serde",
  "yamux",
  "noise",
  "secp256k1",
  "dns",
  "tcp",
  "tokio",
] }
