[package]
name = "anoma-primitives"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[lib]
doctest = false

[dependencies]
bs58 = "0.4"
time = "0.3"
either = "1.8"
bincode = "1.3"
once_cell = "1.16"
curve25519-dalek = "3.2"
multihash = { version = "0.17", features = ["serde-codec"] }
serde = { version = "1.0", features = ["derive"] }
ed25519-dalek = { version = "1", features = [
  "default",
  "serde",
  "u64_backend",
] }

[dev-dependencies]
anyhow = "1"
