[package]
name = "stdpred"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "Anoma Standard Predicate Library"

[lib]
doctest = false
crate-type = ["cdylib"]

[dependencies]
anoma-predicates-sdk = { path = "../sdk/predicates" }
ed25519-dalek = { version = "1", features = [
  "default",
  "serde",
  "u64_backend",
] }
rmp-serde = { version = "1.1", default-features = false }

[dev-dependencies]
anyhow = "1"

[build-dependencies]
anoma-predicates-sdk = { path = "../sdk/predicates" }
