[package]
name = "anoma-validator"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[[bin]]
name = "anoma"
path = "src/main.rs"

[dependencies]
anoma-network = { path = "../network", default-features = false }
anoma-primitives = { path = "../primitives", default-features = false }

anyhow = "1.0"
tokio = { version = "*", features = ["full"] }
