[package]
name = "anoma-validator"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[[bin]]
name = "anoma"
path = "src/main.rs"

[dependencies]
anoma-network = { path = "../network", default-features = false }
anoma-primitives = { path = "../primitives", default-features = false }

anyhow = "1.0"
futures = "0.3"
multiaddr = "0.14"
tokio = { version = "1.22", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

metrics-exporter-prometheus = "0.11"