[package]
name = "anoma-vm"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[lib]
doctest = false

[dependencies]
anoma-primitives = { path = "../primitives", default-features = false }

rmp-serde = "1.1"
thiserror = "1.0"
wasmer = "3.0"
multihash = "0.17"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
