[package]
name = "anoma-vm"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[lib]
doctest = false

[dependencies]
anoma-primitives = { path = "../primitives", default-features = false }

bs58 = "0.4"
once_cell = "1.16"
rmp-serde = "1.1"
thiserror = "1.0"
rayon = "1.6"
multihash = "0.17"
serde = { version = "1.0", features = ["derive"] }
wasmer = { version = "3.0", features = ["cranelift", "singlepass"] }
ed25519-dalek = { version = "1", features = [
  "default",
  "serde",
  "u64_backend",
] }
petgraph = "0.6.2"

[dev-dependencies]
anyhow = "1"
rand = "0.7"
