[package]
name = "anoma-client-sdk"
version = "0.1.0"
edition = "2021"
description = "Anoma Client Rust SDK"

[dependencies]
anoma-network = { path = "../../network" }
anoma-primitives = { path = "../../primitives" }

[dev-dependencies]
rand = "0.8.5"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.22", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
rmp-serde = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
