[package]
name = "anoma-client-sdk"
version = "0.1.0"
edition = "2021"
description = "Anoma Client Rust SDK"

[dependencies]
anoma-vm = { path = "../../vm" }
anoma-primitives = { path = "../../primitives" }
thiserror = "1.0"
multihash = "0.17.0"
bs58 = "0.4"
wasmer = { version = "3.1", features = ["cranelift"] }
tokio = { version = "1.22", features = ["full"] }
futures = "0.3"
dashmap = "5.4"

[dev-dependencies]
rand = "0.8.5"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rmp-serde = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
