[package]
name = "anoma-predicates-sdk"
version = "0.1.0"
edition = "2021"
description = "Anoma on-chain predicates SDK"

[lib]
doctest = false
crate-type = ["cdylib", "lib"]

[dependencies]
anoma-primitives = { path = "../../primitives" }
anoma-predicates-sdk-macros = { path = "./derive" }

rmp-serde = "1.1"
wee_alloc = "0.4.5"
serde = { version = "1.0", default-features = false }
ed25519-dalek = { version = "1", features = [
  "default",
  "serde",
  "u64_backend",
] }

[dev-dependencies]
bs58 = "0.4"

[[example]]
name = "token"
crate-type = ["cdylib"]
